sample/asm/errors/blocks_end_with_returning_instruction.asm
.block: foo__block
    izero 0
.end

.function: main/0
    izero 0
    return
.end
